func:register page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "dependencies": {
     "@capacitor/android": "^5.1.0",
     "@capacitor/core": "^5.1.0",
+    "@capacitor/dialog": "^5.0.5",
     "@capacitor/ios": "^5.1.0",
+    "@capacitor/preferences": "^5.0.5",
+    "@capacitor/toast": "^5.0.5",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
@@ -26,6 +30,7 @@
     "@capacitor/cli": "^5.1.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
