--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/dialog": "^5.0.5",
     "@capacitor/ios": "^5.1.0",
     "@capacitor/preferences": "^5.0.5",
+    "@capacitor/push-notifications": "^5.0.5",
     "@capacitor/toast": "^5.0.5",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
