--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "citrusalertvueapp",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
+    "generate-pwa-assets": "pwa-assets-generator --preset minimal public/AppLogo.svg",
     "dev": "vite",
-    "app": "SET HOST=172.20.104.134&&SET APP=true&&vite",
-    "build": "run-p type-check build-only",
+    "app": "SET HOST=172.20.104.176&&SET APP_HOST=http://172.20.104.176:3000&&vite",
+    "build": "SET HOST=localhost&&run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
@@ -20,7 +21,7 @@
     "@capacitor/dialog": "^5.0.5",
     "@capacitor/ios": "^5.1.0",
     "@capacitor/preferences": "^5.0.5",
-    "@capacitor/push-notifications": "^5.0.5",
+    "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/toast": "^5.0.5",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
@@ -34,6 +35,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.16.17",
+    "@vite-pwa/assets-generator": "^0.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
@@ -49,6 +51,7 @@
     "typescript": "~5.0.4",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.4",
     "vue-tsc": "^1.6.5"
   }
 }
