--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
   "dependencies": {
     "@capacitor/android": "^5.1.0",
     "@capacitor/core": "^5.1.0",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/dialog": "^5.0.5",
     "@capacitor/ios": "^5.1.0",
+    "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/preferences": "^5.0.5",
     "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/toast": "^5.0.5",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
+    "firebase": "^10.0.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuefire": "^3.1.8"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.1.0",
