--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/AppLogo.svg",
-    "dev": "vite",
+    "dev": "SET PLATFORM=web&& vite",
+    "app-dev": "SET VITE_PLATFORM=native&& vite",
     "app": "SET  VITE_SERVER=true&&SET HOST=172.20.104.77&&SET APP_HOST=http://172.20.104.77:3000&&vite",
-    "build": "SET HOST=localhost&&run-p type-check build-only",
+    "build": "SET VITE_PLATFORM=native&& SET HOST=localhost&&run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
