--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "citrusalertvueapp",
-  "version": "0.0.1",
+  "version": "0.0.9",
   "private": true,
   "scripts": {
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/AppLogo.svg",
     "dev": "SET PLATFORM=web&& vite",
     "app-dev": "SET VITE_PLATFORM=native&& vite",
-    "app": "SET  VITE_SERVER=true&&SET HOST=172.20.104.77&&SET APP_HOST=http://172.20.104.77:3000&&vite",
+    "app": "SET  VITE_SERVER=true&&SET HOST=172.20.104.112&&SET APP_HOST=http://172.20.104.112:3000&&vite",
     "build": "SET VITE_PLATFORM=native&& SET HOST=localhost&&run-p type-check build-only",
+    "live-reload": "SET VITE_PLATFORM=native&& SET VITE_SERVER=true&&SET HOST=172.20.104.112&&SET APP_HOST=http://172.20.104.112:3000&&run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
