--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "SET VITE_PLATFORM=native&& SET HOST=localhost&&run-p type-check build-only",
     "live-reload": "SET VITE_PLATFORM=native&& SET VITE_SERVER=true&&SET HOST=172.20.104.112&&SET APP_HOST=http://172.20.104.112:3000&&run-p type-check build-only",
     "preview": "vite preview",
-    "build-only": "vite build",
+    "build-only": "SET PLATFORM=web&& vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
