--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.0.9",
   "private": true,
   "scripts": {
-    "generate-pwa-assets": "pwa-assets-generator --preset minimal public/AppLogo.svg",
     "dev": "SET VITE_PLATFORM=web&& vite",
-    "app-dev": "SET VITE_PLATFORM=native&& vite",
-    "app": "SET  VITE_SERVER=true&&SET HOST=172.20.104.112&&SET APP_HOST=http://172.20.104.112:3000&&vite",
-    "build": "SET VITE_PLATFORM=native&& SET HOST=localhost&&run-p type-check build-only",
-    "live-reload": "SET VITE_PLATFORM=native&& SET VITE_SERVER=true&&SET HOST=172.20.104.112&&SET APP_HOST=http://172.20.104.112:3000&&run-p type-check build-only",
+    "app-dev": "SET VITE_PLATFORM=native&&SET VITE_SERVER=true&&SET HOST=172.27.16.1&&SET APP_HOST=http://172.27.16.1:3000&&vite",
+    "build-native": "SET VITE_PLATFORM=native&& SET HOST=localhost&&run-p type-check build",
+    "build-live-reload": "SET VITE_PLATFORM=native&& SET VITE_SERVER=true&&SET HOST=172.27.16.1&&SET APP_HOST=http://172.27.16.1:3000&&run-p type-check build",
     "preview": "vite preview",
-    "build-only": "SET PLATFORM=web&& vite build",
-    "render": "vite build",
+    "build": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -26,6 +23,7 @@
     "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/preferences": "^5.0.5",
     "@capacitor/push-notifications": "^5.0.6",
+    "@lemonsqueezy/lemonsqueezy.js": "^1.0.3",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "firebase": "^10.0.0",
@@ -39,7 +37,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/crypto-js": "^4.1.1",
-    "@types/node": "^18.16.17",
+    "@types/node": "^20.4.5",
     "@types/uuid": "^9.0.2",
     "@vite-pwa/assets-generator": "^0.0.3",
     "@vitejs/plugin-vue": "^4.2.3",
