--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^5.1.0",
+    "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.1.0",
     "@capacitor/device": "^5.0.6",
     "@capacitor/ios": "^5.1.0",
