--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/push-notifications": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
     "@lemonsqueezy/lemonsqueezy.js": "^1.0.3",
+    "@vueuse/core": "^10.3.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "firebase": "^10.0.0",
