--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@capacitor/cli": "^5.1.0",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@tsconfig/node18": "^2.0.1",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^20.4.5",
